--- a/app/src/main/res/layout/activity_calcurator.xml
+++ b/app/src/main/res/layout/activity_calcurator.xml
@@ -56,7 +56,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
+    <TextView
+        android:id="@+id/red_star4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/prompt_regular"
+        android:text="*"
+        android:textColor="#FF0000"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView8"
+        app:layout_constraintEnd_toStartOf="@+id/textView8" />
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
