--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
 
     <include
         android:id="@+id/include2"
-        layout="@layout/header_layout" />
+        layout="@layout/header_layout"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/textView"
