--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,13 @@
         layout="@layout/header_layout"
         android:visibility="invisible"/>
 
+<!--    <Spinner-->
+<!--        android:id="@+id/spinner_domain"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/include2" />-->
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
