--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,15 +51,15 @@
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="470dp"
+        android:layout_height="425dp"
         android:scrollbars="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:footerDividersEnabled="false"
         android:numColumns="2"
         android:padding="2dp"
+        android:paddingBottom="10dp"
         android:horizontalSpacing="5dp"
         android:verticalSpacing="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_summary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
