--- a/app/src/main/res/layout/activity_reprint.xml
+++ b/app/src/main/res/layout/activity_reprint.xml
@@ -3,7 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <EditText
+        android:id="@+id/productId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="productId"
+        app:layout_constraintBottom_toTopOf="@+id/cashierName"
+        app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/cashierName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="cashierName"
+        android:text="c001"
+        app:layout_constraintBottom_toTopOf="@+id/sellDate"
+        app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/sellDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="วันที่ขาย"
+        app:layout_constraintBottom_toTopOf="@+id/price"
+        app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="ราคา"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/station_code"
+        app:layout_constraintStart_toStartOf="parent" />
     <EditText
         android:id="@+id/station_code"
         android:layout_width="match_parent"
@@ -11,6 +40,7 @@
         android:hint="รหัสสถานี"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:inputType="number"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -18,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="จำนวนสิทธ์"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/station_code" />
 
@@ -25,7 +56,9 @@
         android:id="@+id/promotion_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:hint="โปรโมชั่น id"
+        android:text="32"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/total" />
 
