--- a/app/src/main/res/layout/activity_reprint.xml
+++ b/app/src/main/res/layout/activity_reprint.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="ราคา"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/station_code"
         app:layout_constraintStart_toStartOf="parent" />
     <EditText
